syntax = "proto3";

package io.pixelsdb.pixels.sink.proto;


option java_package = "io.pixelsdb.pixels.sink.proto";
option java_outer_classname = "RowRecordMessage";

message RowRecord {
  RowData before = 1;
  RowData after = 2;
  SourceInfo source = 3;
  TransactionInfo transaction = 4;
  string op = 5;
  int64 ts_ms = 6;
  int64 ts_us = 7;
  int64 ts_ns = 8;
}

message SourceInfo {
  string version = 1;
  string connector = 2;
  string name = 3;
  int64 ts_ms = 4;
  string snapshot = 5;
  string db = 6;
  string sequence = 7;
  int64 ts_us = 8;
  int64 ts_ns = 9;
  string schema = 10;
  string table = 11;
  int64 tx_id = 12;
  int64 lsn = 13;
  int64 xmin = 14;
}

message TransactionInfo {
  string id = 1;
  int64 total_order = 2;
  int64 data_collection_order = 3;
}

message RowData {
  int64 id = 1;
  string name = 2;
  map<string, string> attributes = 3;
}